--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
+# Dependencies
+node_modules
+
+# Next.js
+.next
+.vercel
+out
+
+# Environment
+.env
+.env.local
+.env.production
+.env.development
+.env.test
+.env*.local
+
+# Prisma
+prisma/*.db
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 # Logs
 logs
 *.log
