--- a/package.json
+++ b/package.json
@@ -2,20 +2,24 @@
   "name": "app",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
+    "next": "^15.1.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "19.2.7",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.6",
+    "prisma": "^5.22.0",
+    "typescript": "~5.8.2"
   }
 }
